// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config-modal-inner should WebComponentConfigModalFooter match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <button
        class="button is-fullwidth  is-danger mr-2"
        data-test=""
        type="button"
      >
        CANCEL
      </button>
      <button
        class="button is-fullwidth  is-primary "
        data-test=""
        type="submit"
      >
        SAVE CHANGES
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <button
      class="button is-fullwidth  is-danger mr-2"
      data-test=""
      type="button"
    >
      CANCEL
    </button>
    <button
      class="button is-fullwidth  is-primary "
      data-test=""
      type="submit"
    >
      SAVE CHANGES
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Config-modal-inner should WebComponentConfigModalInner match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <header
        class="modal-card-head"
      >
        <h4
          class="modal-card-title is-4"
        >
          undefined Configuration
        </h4>
      </header>
      <section
        class="modal-card-body"
      >
        <p>
          Please use the following form to configure your diary settings for your 
                    ‘undefined’ widget on your website
        </p>
        <div
          class="field pb-2 checkbox-inline mt-5"
        >
          <div
            class="control"
          >
            <label
              class="label"
              for="appointmentTimeGap"
            >
              Time between appointments
            </label>
            <label
              class="subtext mb-2"
            >
              Select a time between each appointment
            </label>
            <div
              class="columns is-multiline"
              data-test=""
            >
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="appointmentTimeGap15 mins"
                    name="appointmentTimeGap"
                    type="radio"
                    value="15"
                  />
                  <label
                    class="label"
                    for="appointmentTimeGap15 mins"
                  >
                    15 mins
                  </label>
                </div>
              </div>
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    checked=""
                    class="checkbox "
                    id="appointmentTimeGap30 mins"
                    name="appointmentTimeGap"
                    type="radio"
                    value="30"
                  />
                  <label
                    class="label"
                    for="appointmentTimeGap30 mins"
                  >
                    30 mins
                  </label>
                </div>
              </div>
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="appointmentTimeGap1hr"
                    name="appointmentTimeGap"
                    type="radio"
                    value="60"
                  />
                  <label
                    class="label"
                    for="appointmentTimeGap1hr"
                  >
                    1hr
                  </label>
                </div>
              </div>
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="appointmentTimeGap1hr 30mins"
                    name="appointmentTimeGap"
                    type="radio"
                    value="90"
                  />
                  <label
                    class="label"
                    for="appointmentTimeGap1hr 30mins"
                  >
                    1hr 30mins
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="field pb-2 checkbox-inline mt-5"
        >
          <div
            class="control"
          >
            <label
              class="label"
              for="appointmentLength"
            >
              Length of Appointments
            </label>
            <label
              class="subtext mb-2"
            >
              Select a length of appointments
            </label>
            <div
              class="columns is-multiline"
              data-test=""
            >
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="appointmentLength15 mins"
                    name="appointmentLength"
                    type="radio"
                    value="15"
                  />
                  <label
                    class="label"
                    for="appointmentLength15 mins"
                  >
                    15 mins
                  </label>
                </div>
              </div>
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    checked=""
                    class="checkbox "
                    id="appointmentLength30 mins"
                    name="appointmentLength"
                    type="radio"
                    value="30"
                  />
                  <label
                    class="label"
                    for="appointmentLength30 mins"
                  >
                    30 mins
                  </label>
                </div>
              </div>
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="appointmentLength1hr"
                    name="appointmentLength"
                    type="radio"
                    value="60"
                  />
                  <label
                    class="label"
                    for="appointmentLength1hr"
                  >
                    1hr
                  </label>
                </div>
              </div>
              <div
                class="column is-narrow"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="appointmentLength1hr 30mins"
                    name="appointmentLength"
                    type="radio"
                    value="90"
                  />
                  <label
                    class="label"
                    for="appointmentLength1hr 30mins"
                  >
                    1hr 30mins
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="field mt-5"
        >
          <div
            class="control"
          >
            <label
              class="label"
            >
              Days of the week
            </label>
            <label
              class="subtext mb-5"
            >
              Select which days of the week you would like to display
            </label>
            <div
              class="container-flex flex-wrap"
            >
              <div
                class="field mr-5"
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      checked=""
                      class="checkbox"
                      data-test=""
                      id="Monday"
                      type="checkbox"
                      value="1"
                    />
                    <label
                      class="label"
                      for="Monday"
                    >
                      Monday
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field mr-5"
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      checked=""
                      class="checkbox"
                      data-test=""
                      id="Tuesday"
                      type="checkbox"
                      value="2"
                    />
                    <label
                      class="label"
                      for="Tuesday"
                    >
                      Tuesday
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field mr-5"
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      checked=""
                      class="checkbox"
                      data-test=""
                      id="Wednesday"
                      type="checkbox"
                      value="3"
                    />
                    <label
                      class="label"
                      for="Wednesday"
                    >
                      Wednesday
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field mr-5"
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      checked=""
                      class="checkbox"
                      data-test=""
                      id="Thursday"
                      type="checkbox"
                      value="4"
                    />
                    <label
                      class="label"
                      for="Thursday"
                    >
                      Thursday
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field mr-5"
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      checked=""
                      class="checkbox"
                      data-test=""
                      id="Friday"
                      type="checkbox"
                      value="5"
                    />
                    <label
                      class="label"
                      for="Friday"
                    >
                      Friday
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field mr-5"
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      checked=""
                      class="checkbox"
                      data-test=""
                      id="Saturday"
                      type="checkbox"
                      value="6"
                    />
                    <label
                      class="label"
                      for="Saturday"
                    >
                      Saturday
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Sunday"
                      type="checkbox"
                      value="0"
                    />
                    <label
                      class="label"
                      for="Sunday"
                    >
                      Sunday
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="control"
          >
            <div
              class="field field-dropdown-select"
            >
              <label
                class="label "
              >
                Negotiators
              </label>
              <label
                class="subtext mb-2"
              >
                Select which negotiators will be avaiable to attend appointments
              </label>
              <div
                class="rc-select is-primary input rc-select-multiple rc-select-show-search"
              >
                <div
                  class="rc-select-selector"
                >
                  <span
                    class="rc-select-selection-search"
                    style="width: 0px;"
                  >
                    <input
                      aria-activedescendant="negotiatorIds_list_0"
                      aria-autocomplete="list"
                      aria-controls="negotiatorIds_list"
                      aria-haspopup="listbox"
                      aria-owns="negotiatorIds_list"
                      autocomplete="off"
                      class="rc-select-selection-search-input"
                      id="negotiatorIds"
                      role="combobox"
                      value=""
                    />
                    <span
                      aria-hidden="true"
                      class="rc-select-selection-search-mirror"
                    >
                       
                    </span>
                  </span>
                  <span
                    class="rc-select-selection-placeholder"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div />
      </section>
      <footer
        class="modal-card-foot"
      >
        <button
          class="button is-fullwidth  is-danger mr-2"
          data-test=""
          type="button"
        >
          CANCEL
        </button>
        <button
          class="button is-fullwidth  is-primary "
          data-test=""
          type="submit"
        >
          SAVE CHANGES
        </button>
      </footer>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <header
      class="modal-card-head"
    >
      <h4
        class="modal-card-title is-4"
      >
        undefined Configuration
      </h4>
    </header>
    <section
      class="modal-card-body"
    >
      <p>
        Please use the following form to configure your diary settings for your 
                    ‘undefined’ widget on your website
      </p>
      <div
        class="field pb-2 checkbox-inline mt-5"
      >
        <div
          class="control"
        >
          <label
            class="label"
            for="appointmentTimeGap"
          >
            Time between appointments
          </label>
          <label
            class="subtext mb-2"
          >
            Select a time between each appointment
          </label>
          <div
            class="columns is-multiline"
            data-test=""
          >
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="appointmentTimeGap15 mins"
                  name="appointmentTimeGap"
                  type="radio"
                  value="15"
                />
                <label
                  class="label"
                  for="appointmentTimeGap15 mins"
                >
                  15 mins
                </label>
              </div>
            </div>
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  checked=""
                  class="checkbox "
                  id="appointmentTimeGap30 mins"
                  name="appointmentTimeGap"
                  type="radio"
                  value="30"
                />
                <label
                  class="label"
                  for="appointmentTimeGap30 mins"
                >
                  30 mins
                </label>
              </div>
            </div>
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="appointmentTimeGap1hr"
                  name="appointmentTimeGap"
                  type="radio"
                  value="60"
                />
                <label
                  class="label"
                  for="appointmentTimeGap1hr"
                >
                  1hr
                </label>
              </div>
            </div>
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="appointmentTimeGap1hr 30mins"
                  name="appointmentTimeGap"
                  type="radio"
                  value="90"
                />
                <label
                  class="label"
                  for="appointmentTimeGap1hr 30mins"
                >
                  1hr 30mins
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="field pb-2 checkbox-inline mt-5"
      >
        <div
          class="control"
        >
          <label
            class="label"
            for="appointmentLength"
          >
            Length of Appointments
          </label>
          <label
            class="subtext mb-2"
          >
            Select a length of appointments
          </label>
          <div
            class="columns is-multiline"
            data-test=""
          >
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="appointmentLength15 mins"
                  name="appointmentLength"
                  type="radio"
                  value="15"
                />
                <label
                  class="label"
                  for="appointmentLength15 mins"
                >
                  15 mins
                </label>
              </div>
            </div>
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  checked=""
                  class="checkbox "
                  id="appointmentLength30 mins"
                  name="appointmentLength"
                  type="radio"
                  value="30"
                />
                <label
                  class="label"
                  for="appointmentLength30 mins"
                >
                  30 mins
                </label>
              </div>
            </div>
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="appointmentLength1hr"
                  name="appointmentLength"
                  type="radio"
                  value="60"
                />
                <label
                  class="label"
                  for="appointmentLength1hr"
                >
                  1hr
                </label>
              </div>
            </div>
            <div
              class="column is-narrow"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="appointmentLength1hr 30mins"
                  name="appointmentLength"
                  type="radio"
                  value="90"
                />
                <label
                  class="label"
                  for="appointmentLength1hr 30mins"
                >
                  1hr 30mins
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="field mt-5"
      >
        <div
          class="control"
        >
          <label
            class="label"
          >
            Days of the week
          </label>
          <label
            class="subtext mb-5"
          >
            Select which days of the week you would like to display
          </label>
          <div
            class="container-flex flex-wrap"
          >
            <div
              class="field mr-5"
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    data-test=""
                    id="Monday"
                    type="checkbox"
                    value="1"
                  />
                  <label
                    class="label"
                    for="Monday"
                  >
                    Monday
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field mr-5"
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    data-test=""
                    id="Tuesday"
                    type="checkbox"
                    value="2"
                  />
                  <label
                    class="label"
                    for="Tuesday"
                  >
                    Tuesday
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field mr-5"
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    data-test=""
                    id="Wednesday"
                    type="checkbox"
                    value="3"
                  />
                  <label
                    class="label"
                    for="Wednesday"
                  >
                    Wednesday
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field mr-5"
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    data-test=""
                    id="Thursday"
                    type="checkbox"
                    value="4"
                  />
                  <label
                    class="label"
                    for="Thursday"
                  >
                    Thursday
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field mr-5"
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    data-test=""
                    id="Friday"
                    type="checkbox"
                    value="5"
                  />
                  <label
                    class="label"
                    for="Friday"
                  >
                    Friday
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field mr-5"
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    data-test=""
                    id="Saturday"
                    type="checkbox"
                    value="6"
                  />
                  <label
                    class="label"
                    for="Saturday"
                  >
                    Saturday
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Sunday"
                    type="checkbox"
                    value="0"
                  />
                  <label
                    class="label"
                    for="Sunday"
                  >
                    Sunday
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="control"
        >
          <div
            class="field field-dropdown-select"
          >
            <label
              class="label "
            >
              Negotiators
            </label>
            <label
              class="subtext mb-2"
            >
              Select which negotiators will be avaiable to attend appointments
            </label>
            <div
              class="rc-select is-primary input rc-select-multiple rc-select-show-search"
            >
              <div
                class="rc-select-selector"
              >
                <span
                  class="rc-select-selection-search"
                  style="width: 0px;"
                >
                  <input
                    aria-activedescendant="negotiatorIds_list_0"
                    aria-autocomplete="list"
                    aria-controls="negotiatorIds_list"
                    aria-haspopup="listbox"
                    aria-owns="negotiatorIds_list"
                    autocomplete="off"
                    class="rc-select-selection-search-input"
                    id="negotiatorIds"
                    role="combobox"
                    value=""
                  />
                  <span
                    aria-hidden="true"
                    class="rc-select-selection-search-mirror"
                  >
                     
                  </span>
                </span>
                <span
                  class="rc-select-selection-placeholder"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div />
    </section>
    <footer
      class="modal-card-foot"
    >
      <button
        class="button is-fullwidth  is-danger mr-2"
        data-test=""
        type="button"
      >
        CANCEL
      </button>
      <button
        class="button is-fullwidth  is-primary "
        data-test=""
        type="submit"
      >
        SAVE CHANGES
      </button>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
